[tool.poetry]
name = "cuia"
version = "0.1.1"
description = "🧉🌿 A delightful tiny framework for building reliable text-based applications"
authors = ["Felipe S. S. Schneider <schneider.felipe@posgrad.ufsc.br>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/getcuia/cuia"
repository = "https://github.com/getcuia/cuia"
keywords = [
    "ansi",
    "cli",
    "command-line",
    "console",
    "cuia",
    "elm-architecture",
    "framework",
    "functional",
    "gui",
    "simple",
    "terminal-based",
    "terminal",
    "toolkit",
    "tui",
    "ui",
    "user-interface",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Terminals :: Terminal Emulators/X Terminals",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.8"
cusser = "^0.1.1"

[tool.poetry.dev-dependencies]
bandit = "^1.7.4"
black = {version = "^22.6", allow-prereleases = true}
flake8 = "^4.0.1"
isort = "^5.9.3"
mypy = "^0.961"
pdoc = "^12.0.2"
pydocstyle = "^6.1.1"
pyfiglet = "^0.8.post1"
pylint = "^2.16.1"
pytest = "^7.1"
requests = "^2.28.1"
snakeviz = "^2.1.1"
types-requests = "^2.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
